<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_user_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserStatsActivity">

    <View
        android:id="@+id/distance_user_barView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/user_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <View
        android:id="@+id/distance_global_barView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/global_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_user_barView"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/total_distance_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/distance_user_barView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_total_distance_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/number_zero_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_user_barView"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/global_total_distance_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/number_zero_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_global_barView"
        app:layout_constraintVertical_bias="0.019" />

    <View
        android:id="@+id/activity_time_user_barView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:background="@color/user_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_global_barView"
        app:layout_constraintVertical_bias="0.034" />

    <View
        android:id="@+id/activity_time_global_barView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/global_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_time_user_barView"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/total_activity_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_activity_time_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activity_time_user_barView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_global_barView"
        app:layout_constraintVertical_bias="0.848" />

    <TextView
        android:id="@+id/user_total_activity_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/number_zero_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_time_user_barView"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/global_total_activity_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/number_zero_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_time_global_barView"
        app:layout_constraintVertical_bias="0.024" />

    <View
        android:id="@+id/ascent_user_barView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/user_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_time_global_barView"
        app:layout_constraintVertical_bias="0.368" />

    <View
        android:id="@+id/ascent_global_barView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/global_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ascent_user_barView"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/total_ascent_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_ascent_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ascent_user_barView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_time_global_barView"
        app:layout_constraintVertical_bias="0.876" />

    <TextView
        android:id="@+id/user_total_ascent_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/number_zero_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ascent_user_barView"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/global_total_ascent_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/number_zero_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ascent_global_barView"
        app:layout_constraintVertical_bias="0.195" />

</androidx.constraintlayout.widget.ConstraintLayout>